--- a/barra-horizontal.html
+++ b/barra-horizontal.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>"barra de navegacion"</head>
 <style>
+  
 body {
-  margin: 0px auto;
+  margin: 100px auto;
   max-width: 75%;
  
 }
 
 nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  list-style-type: circle;
+  margin:120;
+  padding:10;
   display: flex; 
   justify-content: center;
   overflow: hidden;
