--- a/barra-horizontal.html
+++ b/barra-horizontal.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body {
-  margin: 0px auto;
-  max-width: 75%;
+<head>"programacion"
+<style>="background_color:purple>
+body {https://es.wikipedia.org/wiki/Programaci%C3%B3n
+  margin: 20x auto;
+  max-width: 50%;
  
 }
 
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex; 
+nav3 ul {https://es.wikipedia.org/wiki/Programaci%C3%B3n
+  list-style-type: circle;
+  margin: 50;
+  padding:90 ;
+  display: flex; https://es.wikipedia.org/wiki/Programaci%C3%B3n
   justify-content: center;
   overflow: hidden;
-  background-color: rgb(215, 213, 241);
+  background-color:https://images.app.goo.gl/htULcETctKqtRkrC6 );
 }
  nav li {
-  float: left;
+  float: Izquierdo;
 } 
 
 
-nav li {
-  display: inline-block;
+nav li {https://www.epitech-it.es/que-son-las-etiquetas-programacion/
+  display: inlino-block;
 } 
 
 /* nav li {
@@ -32,27 +32,27 @@ nav li {
 
 nav li a {
   display: block;
-  color: rgb(13, 15, 13);
+  color: orange(13, 15, 13);
   text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
+  padding: 20px 40px;
+  text-decoration: circle;https://images.app.goo.gl/r7S6NcRpFwNDTaa28
 }
 
 nav li a:hover:not(.lalala) {
-  background-color: #ff33a3;
+  background-color:https://g.co/kgs/ZvZ97A;
 }
 
 nav .lalala {
-  background-color: #FFF334;
+  background-color:https://g.co/kgs/Co4qTU;
 }
 nav .lululu{
-  background-color: #AAA334;
+  background-color: https://g.co/kgs/RYRfH1;
 }
 .nav1 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
- overflow: hidden;
+  margin: 20;
+  padding: 30;
+ overflow: center;
 
 }
 
@@ -81,24 +81,24 @@ nav .lululu{
   padding: 10px;
   background-color: #F6FF33;
 }
-.caja1 {
- width: 200px;
- height: 200px;
- background-color: yellow;
+.caja1 {https://laeconomica.com.ar/tienda/revestimientos/ceramicos-de-piso/ceramicos/cortines-ceramicos-de-pared/ceramico-50x50-pavimenti-zirconio-caja1-75-mt%C2%B2/
+ width: 50px;
+ height: 50px;
+ background-color: green;
  /* display: inline-block; */
  float:left;
 }
-.caja2 {
- width: 200px;
- height: 200px;
- background-color: #b6b61d;
+.caja2 {https://www.grupoconstruya.com.ar/notas/Informes_Detalles?CCTN=3710&CINF=336
+ width: 50px;
+ height: 70px;
+ background-color: #b6b61dhttps://g.co/kgs/ajcLj5;
  /* display: inline-block; */
- float:left;
+ float:leftIzquierdo;
 }
-.caja3 {
- width: 200px;
- height: 200px;
- background-color: #3540df;
+.caja3 {cantidad de ceramico 30x30
+ width: 60px;
+ height: 80px;
+ background-color: #3540dfhttps://g.co/kgs/KvLNBc;
  display: inline-block; 
  /* float:left; */
 }
